--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ JWT_SECRET=DTBHJKMBDR
 # EMAIL_PASS=cwzi dezo iuga xdwr
 # for nodemailer
 EMAIL_USER="userakashnettechinnov123@gmail.com"
-EMAIL_PASS="tnvp dxtm ywis hayh"
+EMAIL_PASS="jlyn tnxw hzpp wpte"
 
 # # cloudinary
 CLOUD_NAME=dz9ax2ddy
