--- a/backend/.env
+++ b/backend/.env
@@ -10,7 +10,7 @@ EMAIL_PASS="jlyn tnxw hzpp wpte"
 
 # # cloudinary
 CLOUD_NAME=dz9ax2ddy
-CLOUD_API_KEY= 663897321118397
+CLOUD_API_KEY=663897321118397
 CLOUD_API_SECRET=P4BkWiytj78qN4AE-cUaw7Mnj4Y
 VITE_SOCKET_URL=http://localhost:5000
 
